package echiquier.roles;

import common.plateau.JPlateau;

public class Joueur {

	private JPlateau plateauEchecs;

	public Joueur(JPlateau plateauEchecs) {
		super();
		this.plateauEchecs = plateauEchecs;
	}
	
	
}
