package echiquier.roles;

import common.plateau.SPlateau;

public class Superviseur {

	private SPlateau plateauEchecs;

	public Superviseur(SPlateau plateauEchecs) {
		super();
		this.plateauEchecs = plateauEchecs;
	}
	
}
