package uneAutreImplantationEchiquier;

import java.util.Collection;

import common.piece.Piece;

public class UnEchiquierImpl {
	
	public void init() {};
	public Collection<Piece> extract() {return null;};
	public void dispatch() {};
	public Piece obtain() {return null;};
	public void move() {};

}
